--- a/style.css
+++ b/style.css
@@ -128,6 +128,20 @@ button{
     font-size: 36px;
     margin-bottom: 2rem;
 }
+/***************aPPLICATIONS***************/
+
+
+.mock{
+    width: 80%;
+
+}
+
+.application{
+    display: flex;
+    align-items: center;
+    
+    
+}
 
 
 /***************RESPONSIVE***************/
@@ -172,7 +186,20 @@ button{
         flex-direction: column;
         margin-top: 2rem;
     }
-    
+
+    .application{
+        flex-direction: column;
+        margin-top: 2rem;
+        
+
+    }
+    .staySafe{
+        margin-top: 2rem;
+    }
+    .mock{
+        margin-left: 2rem;
+    }
+
 
     
 }
